syntax = "proto3";

package proto;

option go_package = "github.com/nite-coder/blackbear-demo/pkg/wallet/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


service WalletService {
    rpc GetWallet (google.protobuf.Empty) returns (GetWalletResponse);
    rpc Withdraw (WithdrawRequest) returns (google.protobuf.Empty);
}



message Wallet {
    int64 id = 1;
    int64 amount = 2;
    google.protobuf.Timestamp updated_at = 3;
}


message GetWalletResponse {
    Wallet data = 1;
}

message WithdrawRequest{
    string trans_id = 1;
    int64 amount = 2;
}